--- a/app/src/main/res/layout/activity_dian_ming.xml
+++ b/app/src/main/res/layout/activity_dian_ming.xml
@@ -10,21 +10,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
 
         <RelativeLayout
             android:id="@+id/pay_theme_rl"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="40dp"
-           >
+            android:layout_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="选择课程："
+                android:id="@+id/tv"
                 android:textSize="17sp" />
 
             <!--<EditText-->
@@ -38,7 +39,8 @@
 
             <Spinner
                 android:id="@+id/sp_coursetype"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
+                android:layout_toRightOf="@+id/tv"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
@@ -61,16 +63,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
-    </LinearLayout>
+        android:orientation="horizontal"></LinearLayout>
 
     <TextView
-        android:layout_width="match_parent"
-        android:padding="13dp"
         android:id="@+id/tv_tip"
-        android:textSize="16sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_height="wrap_content" />
+        android:padding="13dp"
+        android:textSize="16sp" />
 
     <ListView
         android:id="@+id/lv_student"
